--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ main {
     padding: 9px 12px;
     border: 1px solid gray;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 footer{
@@ -70,9 +71,7 @@ footer{
 }
 
 @media only screen and (max-width: 600px) {
-    body {
-        background-color: lightblue;
-    }
+    
 
     .container {
         font-size: 12px;
