used css to capitalize first letter of results

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,10 @@ main {
     cursor: pointer;
 }
 
+#resultCont div::first-letter {
+    text-transform: uppercase;
+}
+
 footer{
     font-size: 12px;
     background-color: black;
